<resources>
    <string name="app_name">PnP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_nav">Home</string>
    <string name="register_nav">Register</string>
    <string name="login_nav">Login</string>
    <string name="categories_nav">Categories</string>
    <string name="picknpay_online">PicknPay</string>
    <string name="pnp_website">https://www.pnp.co.za/welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product name</string>
    <string name="todo">TODO</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_one">Fragment one</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="price_product">Price</string>
    <string name="product_image">Product image</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="cart_items">Cart</string>
    <string name="addCount">+</string>
    <string name="minusCount">-</string>
    <string name="item_s"># Item(s)</string>
    <string name="pnp_logo">logo</string>
    <string name="custom_toast">Custom toast</string>
    <string name="subtotal">Subtotal</string>
    <string name="item_quantity">item_quantity</string>
    <string name="delete_icon">delete_icon</string>
    <string name="grand_total">Grand Total</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="proceed">Proceed</string>
    <string name="size">size</string>
    <string name="save_bank_details">Save Bank Details</string>
    <string name="account">Account #</string>
    <string name="bank_pin">Bank Pin</string>
    <string name="customer_name">Customer Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="logout">Logout</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="loading">Loading...</string>
    <string name="full_names">Full Names</string>
    <string name="user_name_error">Enter username</string>
    <string name="user_password_login_err">Enter password</string>
    <string name="banking_details">Banking Details</string>
    <string name="email">Email</string>
    <string name="phone">Phone #</string>
    <string name="confirm_password">Confirm password</string>
    <string name="house">House #</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="recover_password">Recover password</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update profile</string>
    <string name="amount_due">Amount due</string>
    <string name="checkout">Checkout</string>
    <string name="order_date">Order Date:</string>
    <string name="order_amount">Order Amount</string>
    <string name="delivered">Delivered</string>
    <string name="order">Order #</string>
    <string name="customer_full_names">Customer Full Names</string>
    <string name="update_order">Update order</string>
    <string name="driver_id">Driver ID</string>
    <string name="orders">Orders</string>
    <string name="delivered_orders">Delivered orders</string>
    <string name="minimum_quantity">Minimum quantity</string>
    <string name="quantity">Quantity</string>
    <string name="update_product">Update product</string>
    <string name="batch_quantity">Batch quantity</string>
    <string name="view_products">View Products</string>
    <string name="view_categories">View Categories</string>
    <string name="view_customers">View Customers</string>
    <string name="add_products">Add Products</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_driver">Add Driver</string>
    <string name="view_orders">View Orders</string>
    <string name="view_all_app_users">View All App Users</string>
    <string name="new_product">New Product</string>
    <string name="add_product">Add product</string>
    <string name="update_category">Update category</string>
    <string name="category_name">Category name</string>
    <string name="all_suppliers">All Suppliers</string>
    <string name="all_drivers">All Drivers</string>
    <string name="add_category">Add Category</string>

</resources>
