<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/product_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="46dp" />

    <TextView
        android:id="@+id/textViewMinimumQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="56dp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:text="@string/minimum_quantity"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="91dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/quantity"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="56dp" />
</RelativeLayout>

