<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCustomerFullNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:textStyle="bold"
        android:textColor="@color/steelblue"
        android:textSize="20sp"
        android:text="@string/customer_full_names"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp" />

    <TextView
        android:id="@+id/textViewOrderHouseNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textViewCustomerFullNames"
        android:layout_marginTop="62dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:text="@string/house"
        android:layout_alignLeft="@+id/textViewCustomerFullNames" />

    <TextView
        android:id="@+id/textViewArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textViewOrderHouseNo"
        android:layout_marginTop="108dp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/area"
        android:layout_alignLeft="@+id/textViewOrderHouseNo" />
</RelativeLayout>