<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUserProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/steelblue"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:text="@string/customer_name" />

    <ImageView
        android:id="@+id/update_profile_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textViewUserProfileName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/update_profile"
        android:background="@drawable/ic_edit_black_24dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"/>

    <ImageView
        android:id="@+id/delete_profile_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textViewUserProfileName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_delete_forever_black_24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:contentDescription="@string/delete_icon" />
</RelativeLayout>