<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.BankDetailActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:shadowColor="@color/whitesmoke"
        android:shadowDx="1"
        android:shadowDy="1"
        android:layout_gravity="center_horizontal"
        android:shadowRadius="2"
        android:text="@string/banking_details"
        android:textColor="@color/steelblue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerBanks"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputAccountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/steelblue"
        android:layout_margin="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorTextAppearance="@style/error_appearance"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/steelblue"
            android:backgroundTint="@color/steelblue"
            android:hint="@string/account"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/steelblue"
        android:layout_margin="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="5"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:backgroundTint="@color/steelblue"
            android:textColor="@color/steelblue"
            android:hint="@string/bank_pin"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputCustomerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/steelblue"
        android:layout_margin="10dp"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/steelblue"
            android:textColor="@color/steelblue"
            android:hint="@string/customer_name"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSaveBankDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:textColor="@color/whitesmoke"
        android:background="@color/steelblue"
        android:text="@string/save_bank_details"
        android:textAllCaps="false"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>